[metanorma] consolidate AsciiBib ACVP reference into shared file

--- a/src/draft-vassilev-acvp-iana.adoc
+++ b/src/draft-vassilev-acvp-iana.adoc
@@ -139,31 +139,7 @@ Security considerations are addressed by the ACVP specification.
 * [[[RFC8126,RFC 8126]]]
 * [[[RFC8141,RFC 8141]]]
 
-[%bibitem]
-[[ACVP]]
-=== Automatic Cryptographic Validation Protocol
-docid.id:: ACVP
-contributor::
-contributor.person.name.initial:: B.
-contributor.person.name.surname:: Fussell
-contributor.person.affiliation.organization.name:: Cisco
-contributor::
-contributor.person.name.initial:: A.
-contributor.person.name.surname:: Vassilev
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.person.name.initial:: H.
-contributor.person.name.surname:: Booth
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2019-07-01
+include::../../common/common-sections/99-references-acvp.adoc[]
 
 [%bibitem]
 [[Sub-symmetric]]
