--- a/src/kdf/sections/98-references.adoc
+++ b/src/kdf/sections/98-references.adoc
@@ -7,28 +7,4 @@
 * [[[RFC8174,RFC 8174]]]
 * [[[SP800-108,NIST SP 800-108]]]
 
-[%bibitem]
-[[ACVP]]
-=== Automatic Cryptographic Validation Protocol
-docid.id:: ACVP
-contributor::
-contributor.person.name.initial:: B.
-contributor.person.name.surname:: Fussell
-contributor.person.affiliation.organization.name:: Cisco
-contributor::
-contributor.person.name.initial:: A.
-contributor.person.name.surname:: Vassilev
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.person.name.initial:: H.
-contributor.person.name.surname:: Booth
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2019-07-01
+include::../../common/common-sections/99-references-acvp.adoc[]
