--- a/src/sha3/sections/98-references.adoc
+++ b/src/sha3/sections/98-references.adoc
@@ -8,31 +8,7 @@
 
 * [[[FIPS202,NIST FIPS 202]]]
 
-[%bibitem]
-[[ACVP]]
-=== Automatic Cryptographic Validation Protocol
-docid.id:: ACVP
-contributor::
-contributor.person.name.initial:: B.
-contributor.person.name.surname:: Fussell
-contributor.person.affiliation.organization.name:: Cisco
-contributor::
-contributor.person.name.initial:: A.
-contributor.person.name.surname:: Vassilev
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.person.name.initial:: H.
-contributor.person.name.surname:: Booth
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2019-07-01
+include::../../common/common-sections/99-references-acvp.adoc[]
 
 [%bibitem]
 [[SHAVS]]
