--- a/src/symmetric/sections/98-references.adoc
+++ b/src/symmetric/sections/98-references.adoc
@@ -15,34 +15,7 @@
 * [[[SP800-67r2,NIST SP 800-67 Rev. 2]]]
 * [[[RFC3686,RFC 3686]]]
 
-[%bibitem]
-[[ACVP]]
-=== Automatic Cryptographic Validation Protocol
-docid.id:: ACVP
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: B.
-contributor.person.name.surname:: Fussell
-contributor.person.affiliation.organization.name:: Cisco
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: A.
-contributor.person.name.surname:: Vassilev
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: H.
-contributor.person.name.surname:: Booth
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2019-07-01
+include::../../common/common-sections/99-references-acvp.adoc[]
 
 
 [%bibitem]
