Specification updates for RFC3686 * https://github.com/usnistgov/ACVP/issues/1049

--- a/src/symmetric/sections/03-supported.adoc
+++ b/src/symmetric/sections/03-supported.adoc
@@ -14,6 +14,8 @@ The following block cipher algorithms *MAY* be advertised by the ACVP compliant 
 * ACVP-AES-CFB8
 * ACVP-AES-CFB128
 * ACVP-AES-CTR
+  * Conformances
+    * RFC3686
 * ACVP-AES-FF1
 * ACVP-AES-FF3-1
 * ACVP-AES-GCM
@@ -43,3 +45,5 @@ The following block cipher algorithms *MAY* be advertised by the ACVP compliant 
 The following conformances *MAY* be advertised by the ACVP compliant cryptographic module:
 
 * ACVP-AES-CCM conformance "ECMA" which expands upon AES-CCM and adheres to <<ECMA>>. This conformance changes the supported sizes to accomodate the specific sizes required by the use-case of the algorithm.
+
+* ACVP-AES-CTR conformance "RFC3686".  This conformance ensures the IV is generated with the LSB[32] of the IV representing the integer "1".  This conformance also requires the additional registration property of "ivGenMode" which states if the IUT does external or internal IV generation.
