--- a/src/symmetric/sections/04-testtypes.adoc
+++ b/src/symmetric/sections/04-testtypes.adoc
@@ -530,6 +530,8 @@ In <<FIPS-197>>, Section 5.3 defines the inverse cipher for AES. This is not tes
 
 In <<SP800-38E>>, the AES-XTS algorithm is restricted to 2\^20 AES blocks (128-bits each) per key. Due to the size of the data, ACVP does not test the proper usage of a key over such large amounts of data.
 
+In the <<RFC3686>> testing conformance of AES-CTR, tests will be generated ensuring the LSB[32] of the IV represents the integer value of "1".  These tests will allow for either internal or external IV generation from the perspective of the IUT.
+
 [[aes-fp-coverage]]
 ==== AES Format Preserving Encryption Requirements Covered
 
