--- a/src/symmetric/sections/97-examples.adoc
+++ b/src/symmetric/sections/97-examples.adoc
@@ -223,6 +223,26 @@ The following is a example JSON object advertising support for all block ciphers
     "overflowCounter": false
   },
   {
+    "algorithm": "ACVP-AES-CTR",
+    "revision": "1.0",
+    "conformances": ["RFC3686"],
+    "direction": [
+      "encrypt",
+      "decrypt"
+    ],
+    "keyLen": [
+      128,
+      192,
+      256
+    ],
+    "payloadLen": [
+      128
+    ],
+    "incrementalCounter": true,
+    "overflowCounter": false,
+    "ivGenMode": "external"
+  },  
+  {
     "algorithm": "ACVP-AES-CCM",
     "revision": "1.0",
     "prereqVals": [{
@@ -2082,6 +2102,190 @@ The following shows AES-CTR AFT and counter responses.
   ]
 }]
 
+----
+
+The following shows AES-CTR RFC3686 request vectors with internal iv generation.
+
+[source, json]
+----
+{
+	"vsId": 1,
+	"algorithm": "ACVP-AES-CTR",
+	"revision": "1.0",
+	"testGroups": [{
+			"tgId": 1,
+			"testType": "AFT",
+			"direction": "encrypt",
+			"keyLen": 128,
+			"tests": [{
+					"tcId": 12,
+					"pt": "3687D763A3EEC3E3099678068F3CDEB4C7B12BA83C50CCB744D8945C0DB0078E",
+					"payloadLen": 256,
+					"key": "208A474D7567BF87A1A62D0767724547"
+				},
+				{
+					"tcId": 13,
+					"pt": "F96CBC81F0B876A463FD467C5FBA19791A1BE394DF61C883BE7ECB67270846A1E345991F81DAAE4532DEFCFCCDC69BA0",
+					"payloadLen": 384,
+					"key": "629EFE9A344A081CD4E4D758C1E759BF"
+				}
+			]
+		},
+		{
+			"tgId": 3,
+			"testType": "AFT",
+			"direction": "decrypt",
+			"keyLen": 128,
+			"tests": [{
+					"tcId": 62,
+					"payloadLen": 256,
+					"ct": "0306E3B1F1719CD7C64296F52B06F246CAA463BE19309AC2CF842ADE0B0BCD21",
+					"iv": "14FD559C120735498CE09BA800000001",
+					"key": "4D94B2155A6322DB76878C71763EE544"
+				},
+				{
+					"tcId": 63,
+					"payloadLen": 384,
+					"ct": "474AB381112D9FB530BC2E0B2B7E6D139243BC6B1D23D21508E18E82D85218DB10C3C4DABE278B2D334860BEF96B619C",
+					"iv": "8E0759C1B24B8CCBDE7D51C100000001",
+					"key": "BE4AD76083C6A471803FFE704B6F194D"
+				}
+			]
+		}
+	]
+}
+----
+
+The following shows AES-CTR RFC3686 with internal iv generation responses.
+
+[source, json]
+----
+{
+	"vsId": 0,
+	"algorithm": "ACVP-AES-CTR",
+	"mode": "",
+	"revision": "1.0",
+	"isSample": true,
+	"testGroups": [{
+			"tgId": 1,
+			"tests": [{
+					"tcId": 12,
+					"ct": "00F5E67B3C8C6038D907D5866866DDBE583CF90DD8AE37159D1CC0235EEA6175",
+					"iv": "992AA770156A7E1AB58BAFCA00000001"
+				},
+				{
+					"tcId": 13,
+					"ct": "7EA7DC8A993C1EBA61239CFBBBA4244DB185C4F8F248CCF1F1AF7DD7993B1AE5EE05D51AC58D453FE32EC59629F011EC",
+					"iv": "F083A4495B66E5DF0607BF9200000001"
+				}
+			]
+		},
+		{
+			"tgId": 3,
+			"tests": [{
+					"tcId": 62,
+					"pt": "0FC0CAF36921D2803DC9AEBFD5473124D77969BA9FF813861332A3E77E9265C1"
+				},
+				{
+					"tcId": 63,
+					"pt": "9C0DA9C01AEB0B4A42E99776A4E2DFE8E50A7A602E257C7D2EB3C79A529BAA4AC130ADBE6537CB39AA06850044D22547"
+				}
+			]
+		}
+	]
+}
+----
+
+The following shows AES-CTR RFC3686 request vectors with external iv generation.
+
+[source, json]
+----
+{
+	"vsId": 1,
+	"algorithm": "ACVP-AES-CTR",
+	"revision": "1.0",
+	"testGroups": [{
+			"tgId": 1,
+			"testType": "AFT",
+			"direction": "encrypt",
+			"keyLen": 128,
+			"tests": [{
+					"tcId": 12,
+					"pt": "3687D763A3EEC3E3099678068F3CDEB4C7B12BA83C50CCB744D8945C0DB0078E",
+          "iv": "992AA770156A7E1AB58BAFCA00000001",
+					"payloadLen": 256,
+					"key": "208A474D7567BF87A1A62D0767724547"
+				},
+				{
+					"tcId": 13,
+					"pt": "F96CBC81F0B876A463FD467C5FBA19791A1BE394DF61C883BE7ECB67270846A1E345991F81DAAE4532DEFCFCCDC69BA0",
+          "iv": "F083A4495B66E5DF0607BF9200000001",
+					"payloadLen": 384,
+					"key": "629EFE9A344A081CD4E4D758C1E759BF"
+				}
+			]
+		},
+		{
+			"tgId": 3,
+			"testType": "AFT",
+			"direction": "decrypt",
+			"keyLen": 128,
+			"tests": [{
+					"tcId": 62,
+					"payloadLen": 256,
+					"ct": "0306E3B1F1719CD7C64296F52B06F246CAA463BE19309AC2CF842ADE0B0BCD21",
+					"iv": "14FD559C120735498CE09BA800000001",
+					"key": "4D94B2155A6322DB76878C71763EE544"
+				},
+				{
+					"tcId": 63,
+					"payloadLen": 384,
+					"ct": "474AB381112D9FB530BC2E0B2B7E6D139243BC6B1D23D21508E18E82D85218DB10C3C4DABE278B2D334860BEF96B619C",
+					"iv": "8E0759C1B24B8CCBDE7D51C100000001",
+					"key": "BE4AD76083C6A471803FFE704B6F194D"
+				}
+			]
+		}
+	]
+}
+----
+
+The following shows AES-CTR RFC3686 with external iv generation responses.
+
+[source, json]
+----
+{
+	"vsId": 0,
+	"algorithm": "ACVP-AES-CTR",
+	"mode": "",
+	"revision": "1.0",
+	"isSample": true,
+	"testGroups": [{
+			"tgId": 1,
+			"tests": [{
+					"tcId": 12,
+					"ct": "00F5E67B3C8C6038D907D5866866DDBE583CF90DD8AE37159D1CC0235EEA6175"
+				},
+				{
+					"tcId": 13,
+					"ct": "7EA7DC8A993C1EBA61239CFBBBA4244DB185C4F8F248CCF1F1AF7DD7993B1AE5EE05D51AC58D453FE32EC59629F011EC"
+				}
+			]
+		},
+		{
+			"tgId": 3,
+			"tests": [{
+					"tcId": 62,
+					"pt": "0FC0CAF36921D2803DC9AEBFD5473124D77969BA9FF813861332A3E77E9265C1"
+				},
+				{
+					"tcId": 63,
+					"pt": "9C0DA9C01AEB0B4A42E99776A4E2DFE8E50A7A602E257C7D2EB3C79A529BAA4AC130ADBE6537CB39AA06850044D22547"
+				}
+			]
+		}
+	]
+}
 ----
 
 The following shows AES-XPN AFT request vectors.
