--- a/src/symmetric/sections/98-references.adoc
+++ b/src/symmetric/sections/98-references.adoc
@@ -14,7 +14,7 @@
 * [[[SP800-38F,NIST SP 800-38F]]]
 * [[[SP800-38Gr1,NIST SP 800-38G Rev. 1]]]
 * [[[SP800-67r2,NIST SP 800-67 Rev. 2]]]
-
+* [[[RFC3686,RFC 3686]]]
 
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
