Adds XTS revision 2.0 to symmetric specification

--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -50,6 +50,8 @@ Each algorithm capability advertised is a self-contained JSON object and *SHALL*
 | performCounterTests| Indicates if the implementation can perform the Counter tests which check for an always increasing (or decreasing) counter value| boolean
 | tweakLen | The domain of values allowed for ACVP-AES-FF1's tweak value. Allowed range is 0-128 bits mod 8. See <<property_grid_misc>> | domain
 An array of objects that describes an IUT's capabilities as they pertain to ACVP-AES-FF1 and ACVP-AES-FF3-1. See <<property_grid_misc>> and <<property_grid_ff_capabilities>> | Array of Objects
+| dataUnitLen | The length of the ACVP-AES-XTS data unit | domain
+| dataUnitLenMatchesPayload | Whether or not the length of the data unit always matches the length of the payload in ACVP-AES-XTS | boolean
 |===
 
 NOTE: The 'conformances' property is only valid for algorithms listed in <<conformances>>. The valid values in the array are also listed in that section. The array is always optional.
@@ -119,21 +121,27 @@ The following grid outlines which properties are *REQUIRED*, as well as the poss
 
 The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for each miscellaneous block cipher algorithm:
 
+.XTS Block Cipher Algorithm Capabilities Applicability Grid
+
+|===
+| algorithm| revision| direction| keyLen| payloadLen| tweakMode| dataUnitLen| dataUnitLenMatchesPayload
+| ACVP-AES-XTS| "1.0"| ["encrypt", "decrypt"]| [128, 256]| {"Min": 128, "Max": 65536, "Inc": 128}| ["hex", "number"]| |
+| ACVP-AES-XTS| "2.0"| ["encrypt", "decrypt"]| [128, 256]| {"Min": 128, "Max": 65536, "Inc": 8}| ["hex", "number"]| {"Min": 128, "Max": 65536, "Inc": 8}| true, false (if this value is false, the dataUnitLen *SHALL* not be present)
+
 [[property_grid_misc]]
 .Miscellaneous Block Cipher Algorithm Capabilities Applicability Grid
 
 |===
-| algorithm| revision| direction| keyLen| payloadLen| tweakMode| keyingOption| overflowCounter| incrementalCounter| performCounterTests | tweakLen | capabilities
+| algorithm| revision| direction| keyLen| payloadLen| keyingOption| overflowCounter| incrementalCounter| performCounterTests | tweakLen | capabilities
 
-| AES-CBC-CS1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | | |
+| AES-CBC-CS1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | |
 | AES-CBC-CS2| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | | |
 | AES-CBC-CS3| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | | |
-| AES-CTR| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 1, "Max": 128, "Inc": any}| | | true, false| true, false | true, false | |
-| AES-XTS| "1.0"| ["encrypt", "decrypt"]| [128, 256]| {"Min": 128, "Max": 65536, "Inc": 128}| ["hex", "number"]| | | | | |
-| TDES-CTR| "1.0"| ["encrypt", "decrypt"]| | {"Min": 1, "Max": 64, "Inc": any}| | [1, 2] Note: 2 is only available for decrypt operations| true, false|  | |true, false| true, false
-| AES-FF1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | Domain 0-128 bits, mod 8. | At least one set 
+| AES-CTR| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 1, "Max": 128, "Inc": any}| | true, false| true, false | true, false | |
+| TDES-CTR| "1.0"| ["encrypt", "decrypt"]| | {"Min": 1, "Max": 64, "Inc": any}| [1, 2] Note: 2 is only available for decrypt operations| true, false| true, false| true, false | |
+| AES-FF1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | Domain 0-128 bits, mod 8. | At least one set
 of capabilities is required. See <<property_grid_ff_capabilities>> |
-| AES-FF-31| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | | At least one set of capabilities is required. See <<property_grid_ff_capabilities>> |
+| AES-FF-31| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | At least one set of capabilities is required. See <<property_grid_ff_capabilities>> |
 |===
 
 NOTE: keyingOption 2 *SHALL* only available for decrypt operations.
