--- a/src/symmetric/sections/06-test-vectors.adoc
+++ b/src/symmetric/sections/06-test-vectors.adoc
@@ -22,8 +22,8 @@ Test vector sets *MUST* contain one or many test groups, each sharing similar pr
 | payloadLen| Length of plaintext or ciphertext in bits to use| integer
 | aadLen| Length of AAD in bits to use| integer
 | tagLen| Length of AEAD tag in bits to use| integer
-| alphabet | Characters representing the alphabet in use for the group. AES-FF1 and AES-FF3-1 only. | string
-| radix | The number base in use for the group (should match the number of characters from the alphabet. AES-FF1 and AES-FF3-1 only. | integer
+| alphabet | Characters representing the alphabet in use for the group. ACVP-AES-FF1 and ACVP-AES-FF3-1 only. | string
+| radix | The number base in use for the group (should match the number of characters from the alphabet. ACVP-AES-FF1 and ACVP-AES-FF3-1 only. | integer
 | testType| The test category type (AFT, MCT or counter). See <<testtypes>> for more information about what these tests do, and how to implement them. | string
 | tests| Array of individual test case JSON objects, which are defined in <<tcjs>>| array of testCase objects
 |===
@@ -43,27 +43,27 @@ The other properties *MAY* appear depending on the algorithm selected for the te
 .Prompt Test Group Block Cipher Applicability Grid
 
 |===
-| algorithm| keyLen| keyingOption
+| algorithm| revision| keyLen| keyingOption
 
-| AES-ECB| 128, 192, 256|
-| AES-CBC| 128, 192, 256|
-| AES-OFB| 128, 192, 256|
-| AES-CFB1| 128, 192, 256|
-| AES-CFB8| 128, 192, 256|
-| AES-CFB128| 128, 192, 256|
-| AES-FF1| 128, 192, 256|
-| AES-FF3-1| 128, 192, 256|
-| TDES-ECB| | 1, 2
-| TDES-CBC| | 1, 2
-| TDES-CBCI| | 1, 2
-| TDES-CFB1| | 1, 2
-| TDES-CFB8| | 1, 2
-| TDES-CFB64| | 1, 2
-| TDES-CFBP1| | 1, 2
-| TDES-CFBP8| | 1, 2
-| TDES-CFBP64| | 1, 2
-| TDES-OFB| | 1, 2
-| TDES-OFBI| | 1, 2
+| ACVP-AES-ECB| "1.0"| 128, 192, 256|
+| ACVP-AES-CBC| "1.0"| 128, 192, 256|
+| ACVP-AES-OFB| "1.0"| 128, 192, 256|
+| ACVP-AES-CFB1| "1.0"| 128, 192, 256|
+| ACVP-AES-CFB8| "1.0"| 128, 192, 256|
+| ACVP-AES-CFB128| "1.0"| 128, 192, 256|
+| ACVP-AES-FF1| "1.0"| 128, 192, 256|
+| ACVP-AES-FF3-1| "1.0"| 128, 192, 256|
+| ACVP-TDES-ECB| "1.0"| | 1, 2
+| ACVP-TDES-CBC| "1.0"| | 1, 2
+| ACVP-TDES-CBCI| "1.0"| | 1, 2
+| ACVP-TDES-CFB1| "1.0"| | 1, 2
+| ACVP-TDES-CFB8| "1.0"| | 1, 2
+| ACVP-TDES-CFB64| "1.0"| | 1, 2
+| ACVP-TDES-CFBP1| "1.0"| | 1, 2
+| ACVP-TDES-CFBP8| "1.0"| | 1, 2
+| ACVP-TDES-CFBP64| "1.0"| | 1, 2
+| ACVP-TDES-OFB| "1.0"| | 1, 2
+| ACVP-TDES-OFBI| "1.0"| | 1, 2
 |===
 
 The following grid defines when each property is *REQUIRED* from a server for each authenticated block cipher:
@@ -73,12 +73,12 @@ The following grid defines when each property is *REQUIRED* from a server for ea
 .Prompt Test Group Authenticated Block Cipher Applicability Grid
 
 |===
-| algorithm| keyLen| ivGen| ivGenMode| saltGen| ivLen| payloadLen| aadLen| tagLen| saltLen
+| algorithm| revision| keyLen| ivGen| ivGenMode| saltGen| ivLen| payloadLen| aadLen| tagLen| saltLen
 
-| AES-GCM| 128, 192, 256| "internal", "external"| "8.2.1", "8.2.2"| | within domain| within domain| within domain| within domain|
-| AES-GCM-SIV| 128, 256| | | | 96| within domain| within domain| 128|
-| AES-XPN| 128, 192, 256| "internal", "external"| "8.2.1", "8.2.2"| "internal", "external"| 96| within domain| within domain| within domain| 96
-| AES-CCM| 128, 192, 256| | | | within domain| within domain| within domain| within domain|
+| ACVP-AES-GCM| "1.0"| 128, 192, 256| "internal", "external"| "8.2.1", "8.2.2"| | within domain| within domain| within domain| within domain|
+| ACVP-AES-GCM-SIV| "1.0"| 128, 256| | | | 96| within domain| within domain| 128|
+| ACVP-AES-XPN| "1.0"| 128, 192, 256| "internal", "external"| "8.2.1", "8.2.2"| "internal", "external"| 96| within domain| within domain| within domain| 96
+| ACVP-AES-CCM| "1.0"| 128, 192, 256| | | | within domain| within domain| within domain| within domain|
 |===
 
 NOTE: The particular values of a domain are *REQUIRED* to be an integer element of the domain present in the registration used. The ACVP server *MAY* select predetermined or random values with particular features (ex. on a block boundary, or not on a block boundary) within the domain the client provided in the registration.
@@ -90,11 +90,11 @@ The following grid defines when each property is *REQUIRED* from a server for a 
 .Prompt Test Group Key-Wrap Block Cipher Applicability Grid
 
 |===
-| algorithm| keyLen| kwCipher| payloadLen
+| algorithm| revision| keyLen| kwCipher| payloadLen
 
-| AES-KW| 128, 192, 256| "cipher", "inverse"| within domain
-| AES-KWP| 128, 192, 256| "cipher", "inverse"| within domain
-| TDES-KW| | "cipher", "inverse"| within domain
+| ACVP-AES-KW| "1.0"| 128, 192, 256| "cipher", "inverse"| within domain
+| ACVP-AES-KWP| "1.0"| 128, 192, 256| "cipher", "inverse"| within domain
+| ACVP-TDES-KW| "1.0"| | "cipher", "inverse"| within domain
 |===
 
 NOTE: The particular values of a domain are *REQUIRED* to be an integer element of the domain present in the registration used. The ACVP server *MAY* select predetermined or random values with particular features (ex. on a block boundary, or not on a block boundary) within the domain the client provided in the registration.
@@ -106,12 +106,13 @@ The following grid defines when each property is *REQUIRED* from a server for th
 .Prompt Test Group Miscellaneous Block Cipher Applicability Grid
 
 |===
-| algorithm| keyLen| keyingOption| incremental| overflow| tweakMode| payloadLen
+| algorithm| revision| keyLen| keyingOption| incremental| overflow| tweakMode| payloadLen
 
-| AES-CBC-CS1| 128, 192, 256| | | | | within domain
-| AES-CTR| 128, 192, 256| | true, false| true, false| |
-| AES-XTS| 128, 256| | | | "hex", "number"| within domain
-| TDES-CTR| | 1, 2| true, false| true, false| |
+| ACVP-AES-CBC-CS1| "1.0"| 128, 192, 256| | | | | within domain
+| ACVP-AES-CTR| "1.0"| 128, 192, 256| | true, false| true, false| |
+| ACVP-AES-XTS| "1.0"| 128, 256| | | | "hex", "number"| within domain
+| ACVP-AES-XTS| "2.0"| 128, 256| | | | "hex", "number"|
+| ACVP-TDES-CTR| "1.0"| | 1, 2| true, false| true, false| |
 |===
 
 NOTE: The particular values of a domain are *REQUIRED* to be an integer element of the domain present in the registration used. The ACVP server *MAY* select predetermined or random values with particular features (ex. on a block boundary, or not on a block boundary) within the domain the client provided in the registration.
@@ -139,7 +140,8 @@ Each test group *SHALL* contain an array of one or more test cases. Each test ca
 | salt| The salt to use in AES-XPN (required for AES-XPN only)| string (hex)
 | pt| Plaintext to use| string (hex)
 | ct| Ciphertext to use| string (hex)
-| payloadLen| Plaintext or Ciphertext length to use in bits. Only the most significant 'payloadLen' bits will be used.| string (hex)
+| payloadLen| Plaintext or Ciphertext length to use in bits. Only the most significant 'payloadLen' bits will be used.| integer
+| dataUnitLen| Length of the data unit in bits for ACVP-AES-XTS| integer
 | aad| AAD to use for AEAD algorithms| string (hex)
 | tag| Tag to use for AEAD algorithms| string (hex)
 |===
