--- a/src/symmetric/sections/03-supported.adoc
+++ b/src/symmetric/sections/03-supported.adoc
@@ -2,40 +2,41 @@
 [[supported_algs]]
 == Supported Block Cipher Algorithms
 
-The following block cipher algorithms *MAY* be advertised by the ACVP compliant cryptographic module:
+The following block cipher algorithm and test revision pairs *MAY* be advertised by the ACVP compliant cryptographic module (algorithm / revision):
 
-* ACVP-AES-ECB
-* ACVP-AES-CBC
-* ACVP-AES-CBC-CS1
-* ACVP-AES-CBC-CS2
-* ACVP-AES-CBC-CS3
-* ACVP-AES-OFB
-* ACVP-AES-CFB1
-* ACVP-AES-CFB8
-* ACVP-AES-CFB128
-* ACVP-AES-CTR
-* ACVP-AES-FF1
-* ACVP-AES-FF3-1
-* ACVP-AES-GCM
-* ACVP-AES-GCM-SIV
-* ACVP-AES-XPN
-* ACVP-AES-CCM
-* ACVP-AES-XTS
-* ACVP-AES-KW
-* ACVP-AES-KWP
-* ACVP-TDES-ECB
-* ACVP-TDES-CBC
-* ACVP-TDES-CBCI
-* ACVP-TDES-CFB1
-* ACVP-TDES-CFB8
-* ACVP-TDES-CFB64
-* ACVP-TDES-CFBP1
-* ACVP-TDES-CFBP8
-* ACVP-TDES-CFBP64
-* ACVP-TDES-OFB
-* ACVP-TDES-OFBI
-* ACVP-TDES-CTR
-* ACVP-TDES-KW
+* ACVP-AES-ECB / "1.0"
+* ACVP-AES-CBC / "1.0"
+* ACVP-AES-CBC-CS1 / "1.0"
+* ACVP-AES-CBC-CS2 / "1.0"
+* ACVP-AES-CBC-CS3 / "1.0"
+* ACVP-AES-OFB / "1.0"
+* ACVP-AES-CFB1 / "1.0"
+* ACVP-AES-CFB8 / "1.0"
+* ACVP-AES-CFB128 / "1.0"
+* ACVP-AES-CTR / "1.0"
+* ACVP-AES-FF1 / "1.0"
+* ACVP-AES-FF3-1 / "1.0"
+* ACVP-AES-GCM / "1.0"
+* ACVP-AES-GCM-SIV / "1.0"
+* ACVP-AES-XPN / "1.0"
+* ACVP-AES-CCM / "1.0"
+* ACVP-AES-XTS / "1.0"
+* ACVP-AES-XTS / "2.0"
+* ACVP-AES-KW / "1.0"
+* ACVP-AES-KWP / "1.0"
+* ACVP-TDES-ECB / "1.0"
+* ACVP-TDES-CBC / "1.0"
+* ACVP-TDES-CBCI / "1.0"
+* ACVP-TDES-CFB1 / "1.0"
+* ACVP-TDES-CFB8 / "1.0"
+* ACVP-TDES-CFB64 / "1.0"
+* ACVP-TDES-CFBP1 / "1.0"
+* ACVP-TDES-CFBP8 / "1.0"
+* ACVP-TDES-CFBP64 / "1.0"
+* ACVP-TDES-OFB / "1.0"
+* ACVP-TDES-OFBI / "1.0"
+* ACVP-TDES-CTR / "1.0"
+* ACVP-TDES-KW / "1.0"
 
 [[conformances]]
 === Supported Conformances
