More information about new revision vs old revision

--- a/src/symmetric/sections/03-supported.adoc
+++ b/src/symmetric/sections/03-supported.adoc
@@ -38,6 +38,8 @@ The following block cipher algorithm and test revision pairs *MAY* be advertised
 * ACVP-TDES-CTR / "1.0"
 * ACVP-TDES-KW / "1.0"
 
+Multiple testing revisions of the same algorithm allow a validation server to improve testing over time without breaking functionality of existing clients. In the case of symmetric block cipher algorithms, multiple revisions of ACVP-AES-XTS exist and *MAY* individually be provided by a server. The revision numbers of "1.0" and "2.0" indicate a progression among the tests. In this case, the "2.0" tests are fully capable of running the "1.0" implementation of ACVP-AES-XTS. More discussion can be found within <<cap_ex>>.
+
 [[conformances]]
 === Supported Conformances
 
