--- a/src/symmetric/sections/07-responses.adoc
+++ b/src/symmetric/sections/07-responses.adoc
@@ -45,4 +45,5 @@ Each test case is a JSON object that represents a single test object to be proce
 | resultsArray| Array of JSON objects that represent each iteration of a Monte Carlo Test. Each iteration will contain the key(s), pt, ct and iv| array of objects containing pt, ct and iv (except for ECB mode)
 |===
 
-The tcId *MUST* be included in every test case object sent between the client and the server.
+NOTE: The tcId *MUST* be included in every test case object sent between the client and the server.
+
