Updates ANS x9.42 KDF documents to match updated DER encoding options

--- a/src/ans9.42/sections/04-testtypes.adoc
+++ b/src/ans9.42/sections/04-testtypes.adoc
@@ -8,4 +8,4 @@ This section describes the design of the tests used to validate {spec-algorithm}
 
 === Test Coverage
 
-The tests described in this document have the intention of ensuring an implementation is conformant to XXX.
+The tests described in this document have the intention of ensuring an implementation is conformant to {ANSx942} and {SP800-135}.
