--- a/src/ans9.42/sections/05-capabilities.adoc
+++ b/src/ans9.42/sections/05-capabilities.adoc
@@ -16,9 +16,10 @@ A registration *SHALL* use these properties
 | revision | ACVP Test version | string | "1.0"
 | prereqVals | Prereqs of the algo | object | See Prerequisites
 | kdfType | The type of KDF | array | "DER" and/or "concatenation"
-| keyLen | Length of output key - bits | domain | Min:1, Max:65536
-| otherInfoLen | Len of other info - bits | domain | Min:0, Max:65536
-| zzLen | The length of ZZ in bits | domain | Min: 1, Max: 65536
+| keyLen | Length of output key - bits | domain | Min:1, Max:4096
+| otherInfoLen | Length in bits of other info for "concatentation" kdfTYpe | domain | Min:0, Max:4096, Increment: 8
+| suppInfoLen | Length in bits of supplemental public and private info for "DER" kdfType | domain | Min:0, Max:4096, Increment: 8
+| zzLen | The length of ZZ in bits | domain | Min: 1, Max: 4096
 | hashAlg | The supported hash algorithms | array | See <<valid-sha>>
 |===
 
@@ -47,6 +48,10 @@ An example registration within an algorithm capability exchange looks like this
 	"otherInfoLen": [
 		0,
 		1024
+	],
+	"suppInfoLen": [
+		0,
+		256
 	],
 	"zzLen": [
 		8,
