--- a/src/ans9.42/sections/98-references.adoc
+++ b/src/ans9.42/sections/98-references.adoc
@@ -32,3 +32,26 @@ contributor.organization.abbreviation:: NIST
 date::
 date.type:: published
 date.value:: 2019-07-01
+
+[%bibitem]
+=== ANS x9.42
+id:: ANSx942
+docid::
+  id::: ANSx942
+date::
+date.type:: published
+date.value:: 2003
+
+[%bibitem]
+=== SP800-135r1 Recommendation for Existing Application-Specific Key Derivation Functions Revision 1
+id:: SP800-135
+docid::
+  id::: SP800-135
+contributor::
+contributor.person.name.initial:: Q.
+contributor.person.name.surname:: Dang
+contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
+contributor.person.affiliation.organization.abbreviation:: NIST
+date::
+date.type:: published
+date.value:: 2011-12
