Updates prereqs for kas based algorithms

--- a/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
@@ -15,6 +15,23 @@ Some algorithm implementations rely on other cryptographic primitives. For examp
 | prereqAlgVal| prerequistie algorithm validation| object with algorithm and valValue properties| see above| Yes
 |===
 
+KAS has conditional prerequisite algorithms, depending on the capabilities registered:
+
+[[prereqs_requirements_table]]
+
+.Prerequisite requirement conditions
+|===
+| Prerequisite Algorithm| Condition
+
+| DRBG | Always *REQUIRED*
+| SHA | Always *REQUIRED*
+| ECDSA | ECDSA KeyGen/KeyVer validation *REQUIRED* when IUT makes use of the generation/validation of keys within the module boundary.
+| CMAC | CMAC validation *REQUIRED* when IUT is performing KeyConfirmation (KC) or a KDF and utilizing CMAC.
+| HMAC | HMAC validation *REQUIRED* when IUT is performing KeyConfirmation (KC) or a KDF and utilizing HMAC.
+| KMAC | KMAC validation *REQUIRED* when IUT is performing KeyConfirmation (KC) or a KDF and utilizing KMAC.
+|===
+
+
 [[cap_ex]]
 === Algorithm Capabilities JSON Values
 
