--- a/src/kas/sp800-56ar3/ssc/ffc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ssc/ffc/sections/05-capabilities.adoc
@@ -1,3 +1,34 @@
+
+[[prereq_algs]]
+=== Prerequisite Algorithms for KAS FFC Validations
+
+Some algorithm implementations rely on other cryptographic primitives. For example, IKEv2 uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same 	submission. ACVP provides a mechanism for specifying the required prerequisites:
+
+[[rereqs_table]]
+
+.Prerequisite Algorithms JSON Values
+|===
+| JSON Value| Description| JSON type| Valid Values| Optional
+
+| algorithm| a prerequisite algorithm| value| DRBG, DSA, SafePrimes, SHA| No
+| valValue| algorithm validation number| value| actual number or "same"| No
+| prereqAlgVal| prerequistie algorithm validation| object with algorithm and valValue properties| see above| Yes
+|===
+
+KAS has conditional prerequisite algorithms, depending on the capabilities registered:
+
+[[prereqs_requirements_table]]
+
+.Prerequisite requirement conditions
+|===
+| Prerequisite Algorithm| Condition
+
+| DRBG | Always *REQUIRED*
+| SHA | Always *REQUIRED*
+| DSA | DSA KeyGen validation *REQUIRED* when IUT makes use of the "FB" or "FB" (legacy) domain parameters for the generation/validation of keys within the module boundary.
+| SafePrimes | SafePrimes KeyGen/KeyVer validation *REQUIRED* when IUT makes use of the "FB" or "FB" (legacy) domain parameters for the generation/validation of keys within the module boundary.
+|===
+
 [#properties]
 === Property Registration
 
