--- a/src/kas/sp800-56br2/ssc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56br2/ssc/sections/05-capabilities.adoc
@@ -11,9 +11,22 @@ Some algorithm implementations rely on other cryptographic primitives. For examp
 |===
 | JSON Value | Description | JSON Type | Valid Values | Optional
 
-| algorithm | a prerequisite algorithm | value | DRBG, RSA, RSADP, | No
+| algorithm | a prerequisite algorithm | value | DRBG, RSA | No
 | valValue | algorithm validation number | value | actual number or "same" | No
 | prereqAlgVal | prerequisite algorithm validation | object with algorithm and valValue properties | see above | Yes
+|===
+
+KAS has conditional prerequisite algorithms, depending on the capabilities registered:
+
+[[prereqs_requirements_table]]
+
+.Prerequisite requirement conditions
+|===
+| Prerequisite Algorithm| Condition
+
+| DRBG | Always *REQUIRED*
+| SHA | Always *REQUIRED*
+| RSA | RSA KeyGen validation *REQUIRED* when IUT makes use of the generation/validation of keys within the module boundary.
 |===
 
 
