TLSv1.2 Extended Master Secret testing

--- a/src/tls/sections/05-capabilities.adoc
+++ b/src/tls/sections/05-capabilities.adoc
@@ -13,10 +13,10 @@ A registration *SHALL* use these properties
 |===
 | JSON Property | Description | JSON Type | Valid Values
 
-| algorithm | Name of the algorithm to be validated | string | "kdf-components"
-| mode | Mode of the algorithm to be validated | string | "tls"
-| revision | ACVP Test version | string | "1.0"
-| tlsVersion | The version of TLS supported | array | "v1.0/1.1", "v1.2"
+| algorithm | Name of the algorithm to be validated | string | "kdf-components", "TLSv1.2"
+| mode | Mode of the algorithm to be validated | string | "tls", "KDF"
+| revision | ACVP Test version | string | "1.0", "RFC7627"
+| tlsVersion | The version of TLS supported | array | "v1.0/1.1", "v1.2".  Note TLS v1.2 w/ extended master secret testing does not use this property.
 | hashAlg | SHA functions supported if TLS Version "v1.2" is included in the registration | array | See <<valid-sha>>
 |===
 
@@ -35,6 +35,16 @@ An example registration within an algorithm capability exchange looks like this
         "v1.0/1.1",
         "v1.2"
     ],
+    "hashAlg": [
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512"
+    ]
+},
+{
+    "algorithm": "TLSv1.2",
+    "mode": "KDF",
+    "revision": "RFC7627",
     "hashAlg": [
         "SHA2-256",
         "SHA2-384",
