--- a/src/tls/sections/06-test-vectors.adoc
+++ b/src/tls/sections/06-test-vectors.adoc
@@ -10,7 +10,7 @@ The testGroups element at the top level in the test vector JSON object is an arr
 
 | tgId | Test group identifier | integer
 | testType | Test operations to be performed | string
-| tlsVersion | The version of TLS used in the test group | string
+| tlsVersion | The version of TLS used in the test group. Not included for RFC7627 testing. | string
 | hashAlg | SHA version used | string
 | preMasterSecretLength | Pre-master secret length in bits | integer
 | keyBlockLength | Key block length in bits | integer
