--- a/src/tls/sections/98-references.adoc
+++ b/src/tls/sections/98-references.adoc
@@ -6,6 +6,7 @@
 * [[[RFC8174,RFC 8174]]]
 
 * [[[SP800-135,NIST SP 800-135 Rev. 1]]]
+* [[[RFC7627,RFC 7627]]]
 
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
