KAS 1.0 specification correction "macLen" for MAC Options * https://github.com/usnistgov/ACVP-Server/issues/74

--- a/src/kas/sp800-56ar2/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar2/ecc/sections/05-capabilities.adoc
@@ -236,7 +236,7 @@ The following MAC options *MAY* be advertised for registration under a "kdfNoKc"
 
 | keyLen| The supported keyLens for the selected MAC.| Domain|  AES based MACs limited to 128, 192, 256. HashAlg based MACs mod 8. All keySizes minimum *MUST* conform to parameter set requirements See <<parameter_set_details>> . | No
 | nonceLen| The nonce len for use with AES-CCM mac| value| Input as bits, 56-104, odd byte values only (7-13). Additionally minimum *MUST* conform to parameter set requirements See <<parameter_set_details>> . | Yes (required for AES-CCM)
-| macLen| The mac len for use with mac| value| Input as bits, mod 8, minimum *MUST* conform to parameter set requirements See <<parameter_set_details>> , maximum *SHALL NOT* exceed block size.. | Yes (required for AES-CCM)
+| macLen| The mac len for use with mac| value| Input as bits, mod 8, minimum *MUST* conform to parameter set requirements See <<parameter_set_details>> , maximum *SHALL NOT* exceed block size.. | No
 |===
 
 [[supported_kdfOption]]
