--- a/src/kas/sp800-56ar3/ffc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ffc/sections/05-capabilities.adoc
@@ -124,7 +124,7 @@ Note that AT LEAST one KDF Method is required for KAS schemes.  The following *M
 |===
 | JSON Value| Description| JSON type| Valid Values| Optional
 
-| auxFunctionName| The auxiliary function to use.| string| SHA2-224, SHA2-256, SHA2-384, SHA2-512, SHA2-512/224, SHA2-512/256, SHA3-224, SHA3-256, SHA3-384, SHA3-512, HMAC-SHA2-224, HMAC-SHA2-256, HMAC-SHA2-384, HMAC-SHA2-512, HMAC-SHA2-512/224, HMAC-SHA2-512/256, HMAC-SHA3-224, HMAC-SHA3-256, HMAC-SHA3-384, HMAC-SHA3-512, KMAC-128, KMAC-256 | No
+| auxFunctionName| The auxiliary function to use. Note that a customization string of "KDF" is used for the function when KMAC is utilized.| string| SHA2-224, SHA2-256, SHA2-384, SHA2-512, SHA2-512/224, SHA2-512/256, SHA3-224, SHA3-256, SHA3-384, SHA3-512, HMAC-SHA2-224, HMAC-SHA2-256, HMAC-SHA2-384, HMAC-SHA2-512, HMAC-SHA2-512/224, HMAC-SHA2-512/256, HMAC-SHA3-224, HMAC-SHA3-256, HMAC-SHA3-384, HMAC-SHA3-512, KMAC-128, KMAC-256 | No
 | macSaltMethod| How the salt is determined (default being all 00s, random being a random salt). | array of string| default, random| Not optional for mac based auxiliary functions.
 |===
 
@@ -228,8 +228,8 @@ Note that AT LEAST one mac method must be supplied when making use of Key Confir
 | HMAC-SHA3-256| Utilizes HMAC-SHA3-256 as the MAC algorithm. | object| See <<supmacopt>>| Yes
 | HMAC-SHA3-384| Utilizes HMAC-SHA3-384 as the MAC algorithm. | object| See <<supmacopt>>| Yes
 | HMAC-SHA3-512| Utilizes HMAC-SHA3-512 as the MAC algorithm. | object| See <<supmacopt>>| Yes
-| KMAC-128| Utilizes KMAC-128 as the MAC algorithm. | object| See <<supmacopt>>| Yes
-| KMAC-256| Utilizes KMAC-256 as the MAC algorithm. | object| See <<supmacopt>>| Yes
+| KMAC-128| Utilizes KMAC-128 as the MAC algorithm. Note that a customization string of "KC" is used for the function when KMAC is utilized for Key Confirmation.| object| See <<supmacopt>>| Yes
+| KMAC-256| Utilizes KMAC-256 as the MAC algorithm. Note that a customization string of "KC" is used for the function when KMAC is utilized for Key Confirmation.| object| See <<supmacopt>>| Yes
 |===
 
 [[supmacopt]]
