SP800-56Br2 - Clarification on several registration properties * https://github.com/usnistgov/ACVP/issues/1098

--- a/src/kas/sp800-56br2/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56br2/sections/05-capabilities.adoc
@@ -124,10 +124,10 @@ KTS Schemes
 | JSON Value| Description| JSON Type| Valid Values| Optional
 
 | kasRole| Roles supported for key agreement| array| initiator and/or responder| No
-| kdfMethods| The KDF methods to use when testing KAS schemes. | object| <<kdfmethods>>| Not optional for KAS schemes.
-| ktsMethods| The KTS methods to use when testing KTS schemes. | object| <<ktsmethods>>| Not optional for KTS schemes.
-| macMethods| The MAC methods to use when testing KAS or KTS schemes with key confirmation. | object| <<macmethods>>| Not optional for KAS/KTS schemes making use of key confirmation.
-| l | The length of the key to derive (using a KDF) or transport (using a KTS scheme).  This value should be large enough to accommodate the key length used for the mac algorithms in use for key confirmation, ideally the maximum value the IUT can support with their KAS/KTS implementation.  Maximum value (for testing purposes) is 1024.| integer| 128 minimum without KC, 136 minimum with KC, maximum 1024.| No
+| kdfMethods| The KDF methods to use when testing KAS schemes. | object| <<kdfmethods>>| Only applicable (as well as *REQUIRED*) for KAS schemes.
+| ktsMethods| The KTS methods to use when testing KTS schemes. | object| <<ktsmethods>>| Only applicable (as well as *REQUIRED*) for KTS schemes.
+| macMethods| The MAC methods to use when testing KAS or KTS schemes with key confirmation. | object| <<macmethods>>| *REQUIRED* for KAS/KTS schemes making use of Key Confirmation.
+| l | The length of the key to derive (using a KDF) or transport (using a KTS scheme - note that the IUT may be providing their own wrapped key of length `l` for KTS AFT testing as an initiator).  This value should be large enough to accommodate the key length used for the mac algorithms in use for key confirmation, ideally the maximum value the IUT can support with their KAS/KTS implementation.  Maximum value (for testing purposes) is 1024.| integer| 128 minimum without KC, 136 minimum with KC, maximum 1024.| No
 |===
 
 [[kdfmethods]]
