Fixed capitalization for other uses of Sp800-56Ar3

--- a/src/kas/sp800-56ar3/ecc/sections/03-supported.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/03-supported.adoc
@@ -4,4 +4,4 @@
 
 The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
 
-* KAS-FFC / null / SP800-56Ar3
+* KAS-FFC / null / Sp800-56Ar3
