--- a/src/kas/sp800-56ar3/ssc/ecc/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56ar3/ssc/ecc/sections/06-test-vectors.adoc
@@ -50,7 +50,7 @@ Here is an abbreviated yet fully constructed example of the prompt
 {
   "vsId": 1,
   "algorithm": "KAS-ECC-SSC",
-  "revision": "SP800-56Ar3",
+  "revision": "Sp800-56Ar3",
   "testGroups": [
     {
       "tgId": 1,
