--- a/src/kas/sp800-56ar3/ssc/ecc/sections/07-responses.adoc
+++ b/src/kas/sp800-56ar3/ssc/ecc/sections/07-responses.adoc
@@ -47,7 +47,7 @@ Here is an abbreviated example of the response
 {
   "vsId": 1,
   "algorithm": "KAS-ECC-SSC",
-  "revision": "SP800-56Ar3",
+  "revision": "Sp800-56Ar3",
   "testGroups": [
     {
       "tgId": 1,
