--- a/src/kas/sp800-56ar3/ssc/ffc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ssc/ffc/sections/05-capabilities.adoc
@@ -41,7 +41,7 @@ A registration *SHALL* use these properties:
 | JSON Property | Description | JSON Type | Valid Values
 
 | algorithm | Name of the algorithm to be validated | string | "KAS-FFC-SSC"
-| revision | ACVP Test version | string | "SP800-56Ar3"
+| revision | ACVP Test version | string | "Sp800-56Ar3"
 | prereqVals | Prerequisites of the algorithm | object | See <<prerequisites>>
 | scheme | Array of schemes supported | array of objects | See <<scheme>>
 | domainParameterGenerationMethods | Array of strings representing the supported means of generating domain parameters | array of strings | See <<domainParameterGenerationMethods>>
