--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -138,13 +138,13 @@ NOTE: The difference in testing between ACVP-AES-XTS / "1.0" and ACVP-AES-XTS / 
 | algorithm| revision| direction| keyLen| payloadLen| keyingOption| overflowCounter| incrementalCounter| performCounterTests | tweakLen | capabilities
 
 | AES-CBC-CS1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | |
-| AES-CBC-CS2| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | | |
-| AES-CBC-CS3| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | | |
+| AES-CBC-CS2| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | | 
+| AES-CBC-CS3| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | | 
 | AES-CTR| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 1, "Max": 128, "Inc": any}| | true, false| true, false | true, false | |
 | TDES-CTR| "1.0"| ["encrypt", "decrypt"]| | {"Min": 1, "Max": 64, "Inc": any}| [1, 2] Note: 2 is only available for decrypt operations| true, false| true, false| true, false | |
-| AES-FF1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | Domain 0-128 bits, mod 8. | At least one set
-of capabilities is required. See <<property_grid_ff_capabilities>> |
-| AES-FF-31| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | At least one set of capabilities is required. See <<property_grid_ff_capabilities>> |
+| AES-FF1| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | Domain 0-128 bits, mod 8. | At least one set
+of capabilities is required. See <<property_grid_ff_capabilities>> 
+| AES-FF-31| "1.0"| ["encrypt", "decrypt"]| [128, 192, 256]| {"Min": 128, "Max": 65536, "Inc": any}| | | | | | At least one set of capabilities is required. See <<property_grid_ff_capabilities>> 
 |===
 
 NOTE: keyingOption 2 *SHALL* only available for decrypt operations.
